Exercise/local/logs/project.log
2025-05-06T10:22:40.192Z - normal: Load ~/.CocosCreator/settings.json
2025-05-06T10:22:41.309Z - normal: Initializing Asset Database
2025-05-06T10:22:41.311Z - normal: checking language setting...
2025-05-06T10:22:41.311Z - normal: Language: en
2025-05-06T10:22:41.783Z - success: preview server running at http://localhost:7456
2025-05-06T10:22:41.785Z - success: protocol editor-framework registered
2025-05-06T10:22:41.785Z - success: protocol app registered
2025-05-06T10:22:41.785Z - success: protocol theme registered
2025-05-06T10:22:41.785Z - success: protocol packages registered
2025-05-06T10:22:41.785Z - success: protocol uuid registerred
2025-05-06T10:22:41.785Z - success: protocol db registerred
2025-05-06T10:22:41.785Z - success: protocol thumbnail registerred
2025-05-06T10:22:41.785Z - success: protocol unpack registerred
2025-05-06T10:22:41.785Z - success: protocol disable-commonjs registerred
2025-05-06T10:22:42.302Z - normal: connected!
2025-05-06T10:22:42.304Z - normal: Check project D:\enotion\cocos-creator-k5\Exercise
2025-05-06T10:22:42.307Z - normal: Initializing project D:\enotion\cocos-creator-k5\Exercise
2025-05-06T10:22:42.618Z - normal: Initializing Cocos2d
2025-05-06T10:22:43.291Z - normal: Initializing engine extends
2025-05-06T10:22:43.304Z - success: alipay-adapter loaded
2025-05-06T10:22:43.307Z - success: asset-db-debugger loaded
2025-05-06T10:22:43.309Z - success: baidu-adapter loaded
2025-05-06T10:22:43.311Z - success: color-picker loaded
2025-05-06T10:22:43.393Z - success: fb-audience-network loaded
2025-05-06T10:22:43.432Z - success: fb-live-stream loaded
2025-05-06T10:22:43.436Z - success: google-play-instant loaded
2025-05-06T10:22:43.442Z - success: huawei-runtime loaded
2025-05-06T10:22:43.896Z - success: cpk-publish loaded
2025-05-06T10:22:43.912Z - success: jsb-adapter loaded
2025-05-06T10:22:43.928Z - success: oppo-runtime loaded
2025-05-06T10:22:43.935Z - success: package-manager loaded
2025-05-06T10:22:44.198Z - success: qqplay-adapter loaded
2025-05-06T10:22:44.204Z - success: runtime-dev-tools loaded
2025-05-06T10:22:44.216Z - success: sdkbox loaded
2025-05-06T10:22:44.224Z - success: tester loaded
2025-05-06T10:22:44.229Z - success: ui-kit-preview-extra loaded
2025-05-06T10:22:44.233Z - success: ui-kit-preview loaded
2025-05-06T10:22:44.237Z - success: ui-kit loaded
2025-05-06T10:22:44.247Z - success: vivo-runtime loaded
2025-05-06T10:22:44.249Z - success: weapp-adapter loaded
2025-05-06T10:22:44.251Z - success: xiaomi-adapter loaded
2025-05-06T10:22:44.256Z - success: alipay-minigame loaded
2025-05-06T10:22:44.338Z - success: assets loaded
2025-05-06T10:22:44.340Z - success: builder loaded
2025-05-06T10:22:44.788Z - success: cocos-services loaded
2025-05-06T10:22:44.793Z - success: console loaded
2025-05-06T10:22:44.858Z - success: fb-instant-games loaded
2025-05-06T10:22:44.861Z - success: game-window loaded
2025-05-06T10:22:44.863Z - success: google-instant-games loaded
2025-05-06T10:22:44.873Z - success: hierarchy loaded
2025-05-06T10:22:44.879Z - success: inspector loaded
2025-05-06T10:22:44.882Z - success: keystore loaded
2025-05-06T10:22:44.890Z - success: node-library loaded
2025-05-06T10:22:44.894Z - success: package-asset loaded
2025-05-06T10:22:44.897Z - success: preferences loaded
2025-05-06T10:22:44.900Z - success: project-exporter loaded
2025-05-06T10:22:44.902Z - success: project-importer loaded
2025-05-06T10:22:44.906Z - success: project-settings loaded
2025-05-06T10:22:44.914Z - success: scene loaded
2025-05-06T10:22:44.925Z - success: simulator-debugger loaded
2025-05-06T10:22:44.929Z - success: sprite-editor loaded
2025-05-06T10:22:44.933Z - success: store loaded
2025-05-06T10:22:44.941Z - success: timeline loaded
2025-05-06T10:22:44.950Z - success: xiaomi-runtime loaded
2025-05-06T10:22:46.877Z - normal: Loading packages
2025-05-06T10:22:46.887Z - normal: Watching packages
2025-05-06T10:22:47.847Z - normal: Run Application
2025-05-06T10:22:48.604Z - info: Cocos Services load base data!
2025-05-06T10:23:11.824Z - warn: The Asset used by component "cc.Sprite" in scene "D1_Bai6.fire" is missing. Detailed information:
Node path: "Canvas/Background Sprite"
Asset url: "db://assets/Day1/Bai6/D1_Bai6.fire"
Missing uuid: "87123e7f-3090-491f-b661-374c5f4c6f8c"

2025-05-06T10:25:52.311Z - warn: [db-task][sync-changes] Backup unused meta file: db://assets/Day1/D1_Bai1.meta
2025-05-06T10:25:52.337Z - warn: [db-task][sync-changes] Backup unused meta file: db://assets/Day1/D1_Bai2.meta
2025-05-06T10:37:45.600Z - failed: [db-task][sync-changes] Failed to import asset D:\enotion\cocos-creator-k5\Exercise\assets\scripts\MainScript_17.js, message: Compile error: SyntaxError: D:/enotion/cocos-creator-k5/Exercise/assets/scripts/MainScript_17.js: Unexpected token (23:4)
  21 |     calculatePower() {
  22 |         this.hpInput.
> 23 |     }
     |     ^
  24 | });
  25 | 
    at Parser.pp$5.raise (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp$3.parseIdentifier (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:4332:10)
    at Parser.pp$3.parseSubscripts (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3517:30)
    at Parser.pp$3.parseExprSubscripts (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
    at Parser.pp$3.parseExpression (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3306:19)
